[package]
name = "shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossterm = "0.27.0"
fehler = "1.0.0"
markdown = "1.0.0-alpha.16"
markdown-rs = "0.1.0"
pulldown-cmark = "0.10.2"
unlatex = "0.1.0"
